noinst_LIBRARIES = libcommonh264.a

libcommonh264_a_SOURCES = \
	common.c \
	input.c \
	in_file.c \
	coretrans.c \
	nal.c \
	cavlc.c \
	params.c \
	slicehdr.c \
	mbmodes.c \
	residual.c \
	block.c \
	mode_pred.c \
	intra_pred.c \
	mocomp.c \
	results.c \
	nal_thread.c \
        yuv_write.c

top_srcdir = ../../decoder_x86
