#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(decoder_your_decoder_name,your_version)
AM_INIT_AUTOMAKE(foreign) # native x86
#AM_INIT_AUTOMAKE(foreign no-dependencies) # cross arch 

# Checks for programs.
AC_PROG_CC
#AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_RANLIB

AC_PROG_INSTALL

AC_OUTPUT(Makefile src/Makefile common/src/Makefile)
